manifests/applications/shiori/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiori
spec:
  type: ClusterIP
  selector:
    app: shiori
  ports:
    - port: 8080
      targetPort: 8080
